--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	<link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/modal.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
+
+	<title>Su Myat Hnin Portfolio</title>
 </head>
 <body oncontextmenu="return false">
   <div class="loader">
