--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div class="home-content">
 				<div class="my-display">
 					<div class="my-potrait">
-						<img src="./assets/img/smh.png" alt="Su-Myat-Hnin"/>
+						<img src="./assets/img/smh-blur.png" alt="Su-Myat-Hnin"/>
 					</div>
 					<div class="social-media">
 						<img onclick="goTo('www.facebook.com/sumyat.hnin.96')" src="./assets/icons/facebook.svg" alt="facebook" />
